# serde_scala

./: Cargo.toml
scl/: 100edo.scl  104edo.scl  105edo.scl  10edo.scl  10highschool1.scl  10highschool2.scl  111edo.scl  116edo.scl  117edo.scl  118edo.scl  11edo.scl  122edo.scl  123edo.scl  128edo.scl  12edo.scl  12highschool1.scl  12highschool2.scl  12highschool3.scl  12highschool4.scl  13-31.scl  130edo.scl  131edo.scl  13edo.scl  145edo.scl  147edo.scl  149edo.scl  14edo.scl  150edo.scl  157edo.scl  159edo.scl  15edo.scl  15highschool1.scl  15highschool2.scl  166edo.scl  16edo.scl  171edo.scl  17edo.scl  180edo.scl  1848edo.scl  185edo.scl  (+209 more)
src/: lib.rs
