[package]
name = "serde_scala"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A .scl scala file parser"
repository = "https://github.com/sigurd4/serde_scala"
keywords = ["serde", "scala", "scl", "scale", "music"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.4.1"